test/testcases/malgo/error/InvalidPattern.mlg
module {..} = import "../../../../runtime/malgo/Builtin.mlg"
module {..} = import "../../../../runtime/malgo/Prelude.mlg"

def isNil = {
  [] -> True,
  _ _ -> False,
--    ^ different number of patterns
}

def main = { putStrLn "OK" }
